# client-rust

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/: codecov.yml  dependabot.yml
.github/workflows/: tests.yaml
src/: binding.rs  bindings.rs  lib.rs  map.rs  secret.rs
tests/: example.rs
